--- a/planner/planner-app/src/app/components/title/title.component.html
+++ b/planner/planner-app/src/app/components/title/title.component.html
@@ -1,1 +1,5 @@
-<p>title works!</p>
+<h1>Planejamento Semanal</h1>
+<div class="d-flex justify-content-center" id="date">
+  <span>{{todayIs}}</span>
+
+</div>
