--- a/planner/planner-app/src/app/modules/header/header.component.html
+++ b/planner/planner-app/src/app/modules/header/header.component.html
@@ -1,1 +1,8 @@
-<p>header works!</p>
+<div class="row">
+    <div class="col-10 col-sm-10 col-md-12 col-lg-12 ">
+        <app-title></app-title>
+    </div>
+    <div class="">
+        <app-actions-planner></app-actions-planner>
+    </div>
+</div>
