--- a/planner/planner-app/src/app/app.component.html
+++ b/planner/planner-app/src/app/app.component.html
@@ -1,5 +1,5 @@
-<div>
-  <div>
+<div [ngClass]="[themeService.theme]">
+  <div id="principal">
     <app-header></app-header>
     <app-body></app-body>
   </div>
