--- a/planner/planner-app/src/app/components/modal-graphic/modal-graphic.component.html
+++ b/planner/planner-app/src/app/components/modal-graphic/modal-graphic.component.html
@@ -1,1 +1,13 @@
-<p>modal-graphic works!</p>
+<div class="modal-header">
+    <p class="modal-title pull-left petro-sans-normal title-page">Estatísticas</p>
+    <button type="button" class="close pull-right" id="btn-close" aria-label="Close"
+        (click)="bsModalRef.hide(); cleanValues()">
+        <span aria-hidden="true">&times;</span>
+    </button>
+</div>
+<div class="modal-body">
+    <div class="container-fluid">
+
+        <app-graphic></app-graphic>
+    </div>
+</div>
