--- a/planner/planner-app/src/app/components/modal-reset/modal-reset.component.html
+++ b/planner/planner-app/src/app/components/modal-reset/modal-reset.component.html
@@ -1,1 +1,15 @@
-<p>modal-reset works!</p>
+<div class="modal-header">
+    <p class="modal-title pull-left petro-sans-normal title-page">Resetar Semana</p>
+    <button type="button" class="close pull-right" id="btn-close" aria-label="Close" (click)="bsModalRef.hide()">
+        <span id="close" aria-hidden="true">&times;</span>
+    </button>
+</div>
+<div class="modal-body">
+    <div class="container-fluid">
+        <span> Tem certeza que deseja resetar a semana? Todos dados serão apagados! </span>
+        <div>
+            <button class="btn btn-success btn-sm" (click)="reset()">Sim</button>
+            <button class="btn btn-danger btn-sm" (click)="bsModalRef.hide()">Não</button>
+        </div>
+    </div>
+</div>
