--- a/planner/planner-app/src/app/modules/body/body.component.html
+++ b/planner/planner-app/src/app/modules/body/body.component.html
@@ -1,1 +1,63 @@
-<p>body works!</p>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-lg col-md col-sm">
+            <div class="row">
+                <div class="col-lg col-md col-sm box">
+                    <app-task-form></app-task-form>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-lg col-md box dia-semana" [ngClass]="{ 'today-is': weekDay === 'segunda' }">
+                    <app-week-days where="mon" day="Segunda"></app-week-days>
+                </div>
+
+                <div class="col-lg col-md-4 box dia-semana" [ngClass]="{ 'today-is': weekDay === 'terça' }">
+                    <app-week-days where="tue" day="Terça"></app-week-days>
+                </div>
+
+                <div class="col-lg col-md box dia-semana" [ngClass]="{ 'today-is': weekDay === 'quarta' }">
+                    <app-week-days where="wed" day="Quarta"></app-week-days>
+                </div>
+
+                <div class="col-lg col-md-6 box dia-semana" [ngClass]="{ 'today-is': weekDay === 'quinta' }">
+                    <app-week-days where="thu" day="Quinta"></app-week-days>
+                </div>
+
+                <div class="col-lg col-md box dia-semana" [ngClass]="{ 'today-is': weekDay === 'sexta' }">
+                    <app-week-days where="fri" day="Sexta"></app-week-days>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-lg col-md box dia-semana" [ngClass]="{ 'today-is': weekDay === 'sábado' }">
+                    <app-week-days where="sat" day="Sabado"></app-week-days>
+                </div>
+
+                <div class="col-lg col-md box dia-semana" [ngClass]="{ 'today-is': weekDay === 'domingo' }">
+                    <app-week-days where="sun" day="Domingo"></app-week-days>
+                </div>
+
+                <div class="col-lg col-md box dia-semana tlmd">
+                    <app-notes-todo where="notes" list="Anotações"></app-notes-todo>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-lg-2 col-md-3 col-sm-4">
+            <div class="row">
+                <div class="col-lg-12 col-md-12 col-sm-12 box calendarBox">
+                    <app-calendar></app-calendar>
+                </div>
+
+                <div class="col-lg-12 col-md-12 col-sm-12 box">
+                    <app-notes-todo where="todo" list="Tarefas"></app-notes-todo>
+                </div>
+
+                <div class="col-lg-12 col-md-12 col-sm-12 box tlsm">
+                    <app-notes-todo where="notes" list="Anotações"></app-notes-todo>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
