ajustes dados gráfico

--- a/planner/planner-app/src/app/components/graphic/graphic.component.html
+++ b/planner/planner-app/src/app/components/graphic/graphic.component.html
@@ -1,5 +1,5 @@
 <div>
-    <canvas baseChart chartType="pie" [data]="itemService.valuesType" [labels]="itemService.types"
-        [colors]="chartColors" [legend]="true">
+    <canvas baseChart chartType="pie" [data]="itemService.valuesType"   [labels]="itemService.types" 
+        [colors]="chartColors" [legend]="true" [options] = "pieChartOptions">
     </canvas>
 </div>
