--- a/planner/planner-app/src/app/components/modal-graphic/modal-graphic.component.html
+++ b/planner/planner-app/src/app/components/modal-graphic/modal-graphic.component.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-    <p class="modal-title pull-left petro-sans-normal title-page">Estatísticas</p>
+    <p class="modal-title pull-left petro-sans-normal title-page">Estatísticas - Tarefas <span>(Total: {{ itemsService.totalTasks }}) </span></p>
     <button type="button" class="close pull-right" id="btn-close" aria-label="Close"
         (click)="bsModalRef.hide(); cleanValues()">
         <span aria-hidden="true">&times;</span>
