--- a/planner/planner-app/src/app/modules/body/body.component.html
+++ b/planner/planner-app/src/app/modules/body/body.component.html
@@ -8,29 +8,29 @@
             </div>
 
             <div class="row">
-                <div class="col-lg col-md box dia-semana" [ngClass]="{ 'today-is': weekDay === 'segunda' }">
+                <div class="col-lg col-md box dia-semana" [ngClass]="{ 'today-is': weekDay === 'segunda-feira' }">
                     <app-week-days where="mon" day="Segunda"></app-week-days>
                 </div>
 
-                <div class="col-lg col-md-4 box dia-semana" [ngClass]="{ 'today-is': weekDay === 'terça' }">
+                <div class="col-lg col-md-4 box dia-semana" [ngClass]="{ 'today-is': weekDay === 'terça-feira' }">
                     <app-week-days where="tue" day="Terça"></app-week-days>
                 </div>
 
-                <div class="col-lg col-md box dia-semana" [ngClass]="{ 'today-is': weekDay === 'quarta' }">
+                <div class="col-lg col-md box dia-semana" [ngClass]="{ 'today-is': weekDay === 'quarta-feira' }">
                     <app-week-days where="wed" day="Quarta"></app-week-days>
                 </div>
 
-                <div class="col-lg col-md-6 box dia-semana" [ngClass]="{ 'today-is': weekDay === 'quinta' }">
+                <div class="col-lg col-md-6 box dia-semana" [ngClass]="{ 'today-is': weekDay === 'quinta-feira' }">
                     <app-week-days where="thu" day="Quinta"></app-week-days>
                 </div>
 
-                <div class="col-lg col-md box dia-semana" [ngClass]="{ 'today-is': weekDay === 'sexta' }">
+                <div class="col-lg col-md box dia-semana" [ngClass]="{ 'today-is': weekDay === 'sexta-feira' }">
                     <app-week-days where="fri" day="Sexta"></app-week-days>
                 </div>
             </div>
 
             <div class="row">
-                <div class="col-lg col-md box dia-semana" [ngClass]="{ 'today-is': weekDay === 'sábado' }">
+                <div class="col-lg col-md box dia-semana" [ngClass]="{ 'today-is': weekDay === 'sabado' }">
                     <app-week-days where="sat" day="Sabado"></app-week-days>
                 </div>
 
