--- a/planner/planner-app/src/app/components/week-days/week-days.component.html
+++ b/planner/planner-app/src/app/components/week-days/week-days.component.html
@@ -23,7 +23,8 @@
                     <ng-container *ngIf="item.type === 'note'"><i class="fas fa-pen"></i></ng-container>
                     <ng-container *ngIf="item.type === 'tv'"><i class="fas fa-film"></i></ng-container>
 
-                    {{ item.description }} <i *ngIf="item.important" class="fas fa-exclamation-circle"> </i> <i *ngIf="item.finished" class="fas fa-check"> </i>
+                    {{ item.description }} <i *ngIf="item.important" class="fas fa-exclamation-circle"> </i> <i
+                        *ngIf="item.finished" class="fas fa-check"> </i>
                     <i *ngIf="item.canceled" class="fas fa-times"> </i>
 
                     <p id="obs" *ngIf="item.obs !== ''">
