--- a/planner/planner-app/src/app/modules/body/body.component.html
+++ b/planner/planner-app/src/app/modules/body/body.component.html
@@ -30,8 +30,8 @@
             </div>
 
             <div class="row">
-                <div class="col-lg col-md box dia-semana" [ngClass]="{ 'today-is': weekDay === 'sabado' }">
-                    <app-week-days where="sat" day="Sabado"></app-week-days>
+                <div class="col-lg col-md box dia-semana" [ngClass]="{ 'today-is': weekDay === 'sábado' }">
+                    <app-week-days where="sat" day="Sábado"></app-week-days>
                 </div>
 
                 <div class="col-lg col-md box dia-semana" [ngClass]="{ 'today-is': weekDay === 'domingo' }">
